--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 <body>
 <h1></h1>
 
-
+<script type='text/javascript'>
+window.location = "www.besport.com" ;
+</script>
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Wed Aug 22 21:34:09 PDT 2012 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Wed Aug 22 21:35:19 PDT 2012 <!-- hhmts end -->
 </body> </html>
