--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <h1></h1>
 
 <script type='text/javascript'>
-window.location = "www.besport.com" ;
+window.location = "http://www.besport.com" ;
 </script>
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Wed Aug 22 21:35:19 PDT 2012 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu Aug 23 00:07:05 PDT 2012 <!-- hhmts end -->
 </body> </html>
